# nbody-simulation

./: .env.cmake  CMakeLists.txt  README.md  debug.bat  release.bat
src/: App.cpp  App.hpp  main.cpp  pch.h  pch.hpp  preferences.h  preferences.hpp  utils.hpp
src/engine/: Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Spawner.cpp  Spawner.hpp  colormap.hpp  qrsqrt.hpp  quadtree.cpp  quadtree.hpp
src/engine/opencl-bruteforce/: RuntimeOpenCL.cpp  RuntimeOpenCL.hpp  particle-attraction.cl
src/engine/utils/: ThreadPool.cpp  colormap.frag  colormap.hpp
src/res/kernels/: particle-attraction.cl
src/shaders/: blur.frag  mix.frag
src/utils/: ThreadPool.cpp  ThreadPool.hpp  colormaps.hpp  file.hpp  utils.hpp
